add lazy loading and fetchpriority

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -115,7 +115,7 @@
       
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" />
+        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -151,7 +151,7 @@
       
         <!-- Logo -->
     <div class="flex justify-center mt-24 mb-8" data-aos="fade-down">
-        <img src="../img/logo/mvh_logo.png" alt="Metro Vigan Hospital Logo" class="w-48 md:w-56">
+        <img src="../img/logo/mvh_logo.png" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="w-48 md:w-56">
       </div>
   
       <!-- Title -->
