--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -66,7 +66,7 @@
       
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" />
+        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -100,7 +100,7 @@
   <div id="tos-content" class="relative max-w-4xl mx-auto bg-white shadow-lg border border-gray-300 mt-40 mb-10 p-12 overflow-hidden">
     <!-- Letterhead -->
     <div class="flex flex-col items-center mb-6">
-      <img src="../img/logo/mvh_logo.png" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
+      <img src="../img/logo/mvh_logo.png" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
       <h2 class="text-lg font-semibold text-gray-700">Metro Vigan Hospital</h2>
       <p class="text-sm text-gray-600">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</p>
     </div>
