changed logo from png to avif

--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -21,7 +21,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Careers at Metro Vigan Hospital" />
   <meta property="og:description" content="Join our dedicated team at Metro Vigan Hospital. Explore job opportunities for doctors, nurses, and healthcare professionals. Build your career with us today!" />
-  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif" />
   <meta property="og:url" content="https://www.metroviganhospital.com/careers" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Metro Vigan Hospital" />
@@ -43,7 +43,7 @@
       "@type": "Organization",
       "name": "Metro Vigan Hospital",
       "url": "https://www.metroviganhospital.com",
-      "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+      "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
       "sameAs": [
         "https://www.facebook.com/MetroViganHospital",
         "https://www.instagram.com/MetroViganHospital"
@@ -74,7 +74,7 @@
         "name": "Metro Vigan Hospital",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png"
+          "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif"
         }
       }
     },
@@ -91,7 +91,7 @@
       "hiringOrganization": {
         "@type": "Organization",
         "name": "Metro Vigan Hospital",
-        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
         "sameAs": "https://www.metroviganhospital.com"
       },
       "employmentType": "FULL_TIME",
@@ -188,7 +188,7 @@
       
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
+        <img src="../img/logo/mvh_logo.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -297,7 +297,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="../img/logo/mvh_logo-wht.png" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="../img/logo/mvh_logo-wht.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
