--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -23,7 +23,7 @@
   <!-- Open Graph (Facebook & Instagram) -->
   <meta property="og:title" content="About Us - Metro Vigan Hospital" />
   <meta property="og:description" content="Discover the history, vision, and mission of Metro Vigan Hospital as we continue to provide excellent healthcare services to the community." />
-  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif" />
   <meta property="og:url" content="https://www.metroviganhospital.com/about" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Metro Vigan Hospital" />
@@ -45,7 +45,7 @@
         "@type": "Organization",
         "name": "Metro Vigan Hospital",
         "url": "https://www.metroviganhospital.com",
-        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+63-927-509-0414",
@@ -115,7 +115,7 @@
       
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
+        <img src="../img/logo/mvh_logo.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -151,7 +151,7 @@
       
         <!-- Logo -->
     <div class="flex justify-center mt-24 mb-8" data-aos="fade-down">
-        <img src="../img/logo/mvh_logo.png" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="w-48 md:w-56">
+        <img src="../img/logo/mvh_logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="w-48 md:w-56">
       </div>
   
       <!-- Title -->
@@ -441,7 +441,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="../img/logo/mvh_logo-wht.png" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="../img/logo/mvh_logo-wht.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
