--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -19,7 +19,7 @@
   <!-- Open Graph (Facebook & Instagram) -->
   <meta property="og:title" content="Privacy Policy - Metro Vigan Hospital" />
   <meta property="og:description" content="Understand how Metro Vigan Hospital safeguards your personal data, complies with the Data Privacy Act, and upholds patient confidentiality." />
-  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif" />
   <meta property="og:url" content="https://www.metroviganhospital.com/privacy-policy" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Metro Vigan Hospital" />
@@ -41,7 +41,7 @@
         "@type": "Organization",
         "name": "Metro Vigan Hospital",
         "url": "https://www.metroviganhospital.com",
-        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
         "sameAs": [
           "https://www.facebook.com/MetroViganHospital",
           "https://www.instagram.com/MetroViganHospital"
@@ -72,7 +72,7 @@
           "name": "Metro Vigan Hospital",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png"
+            "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif"
           }
         }
       },
@@ -89,7 +89,7 @@
         "hiringOrganization": {
           "@type": "Organization",
           "name": "Metro Vigan Hospital",
-          "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+          "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
           "sameAs": "https://www.metroviganhospital.com"
         },
         "employmentType": "FULL_TIME",
@@ -185,7 +185,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
+        <img src="../img/logo/mvh_logo.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -220,7 +220,7 @@
   <div id="pdf-content" class="relative max-w-4xl mx-auto bg-white shadow-lg border border-gray-300 mt-40 mb-10 p-12 overflow-hidden">
     <!-- Letterhead with Logo -->
     <div class="flex flex-col items-center mb-6">
-      <img src="../img/logo/mvh_logo.png" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
+      <img src="../img/logo/mvh_logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
       <h2 class="text-lg font-semibold text-gray-700">Metro Vigan Hospital</h2>
       <p class="text-sm text-gray-600">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</p>
     </div>
@@ -278,7 +278,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="../img/logo/mvh_logo-wht.png" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="../img/logo/mvh_logo-wht.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
