--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -23,7 +23,7 @@
   <!-- Open Graph (Facebook & Instagram) -->
   <meta property="og:title" content="Terms of Service - Metro Vigan Hospital" />
   <meta property="og:description" content="Review the Terms of Service for Metro Vigan Hospital to understand your rights and our commitment to safe, ethical healthcare practices." />
-  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif" />
   <meta property="og:url" content="https://www.metroviganhospital.com/terms-of-service" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Metro Vigan Hospital" />
@@ -66,7 +66,7 @@
       
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
+        <img src="../img/logo/mvh_logo.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -100,7 +100,7 @@
   <div id="tos-content" class="relative max-w-4xl mx-auto bg-white shadow-lg border border-gray-300 mt-40 mb-10 p-12 overflow-hidden">
     <!-- Letterhead -->
     <div class="flex flex-col items-center mb-6">
-      <img src="../img/logo/mvh_logo.png" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
+      <img src="../img/logo/mvh_logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
       <h2 class="text-lg font-semibold text-gray-700">Metro Vigan Hospital</h2>
       <p class="text-sm text-gray-600">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</p>
     </div>
@@ -139,7 +139,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="../img/logo/mvh_logo-wht.png" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="../img/logo/mvh_logo-wht.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
