--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>404 - Page Not Found | Metro Vigan Hospital</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gray-100 flex place-items-center items-center text-center justify-center min-h-screen">
 
   <div class="text-center px-6">
     <!-- 404 Title -->
@@ -17,15 +17,14 @@
     </p>
 
     <!-- SVG Icon -->
-    <div class="mt-6 flex justify-center">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-24 w-24 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m-9 4h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v12a2 2 0 002 2z" />
-      </svg>
+    <div class="mt-6 grid justify-center items-center text-center place-items-center">
+      <img src="src/img/logo/mvh_logo-wht.avif" class="h-48">
+      <p class="my-4 text-2xl font-semibold text-gray-800">Metro Vigan Hospital</p>
     </div>
 
     <!-- Back to Home Button -->
     <div class="mt-6">
-      <a href="/" class="bg-green-700 text-white px-6 py-3 rounded-md text-lg font-medium hover:bg-green-800 transition">
+      <a href="index.html" class="bg-green-700 text-white px-6 py-3 rounded-md text-lg font-medium hover:bg-green-800 transition">
         Go Back Home
       </a>
     </div>
