--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
+  <script src="https://cdn.tailwindcss.com"></script>
+  
   <!-- For SEO Ranking -->
   <script type="application/ld+json">
 {
@@ -127,7 +129,7 @@
   </script>
 
 </head>
-<body class="bg-white text-gray-800 overflow-x-hidden">
+<body class="bg-white text-gray-800 overflow-hidden">
 
   <!-- NAVBAR SECTION -->
   <nav class="fixed top-0 z-50 w-full bg-white border-b shadow-md sm:px-4 md:px-6 px-10 py-2" aria-label="Main navigation">
@@ -135,7 +137,7 @@
       
       <!-- Logo -->
       <a href="" class="flex items-center justify-center">
-        <img src="src/img/logo/mvh_logo.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
+        <img src="src/img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -942,7 +944,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/logo/mvh_logo.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonah Lyn" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/logo/mvh_logo-wht.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonah Lyn" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Jonah Lyn Toribio</h3>
             <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p>
@@ -1286,7 +1288,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="src/img/logo/mvh_logo-wht.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="src/img/logo/mvh_logo_optimized.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
@@ -1385,6 +1387,7 @@
   </footer>
 
 <!-- icons / css -->
+<script src="src/js/script.js"></script>
 <script>
   const toggleBtn = document.getElementById('menu-toggle');
   const menu = document.getElementById('navbar-menu');
@@ -1393,8 +1396,6 @@
     menu.classList.toggle('hidden');
   });
 </script>
-
-<script src="https://cdn.tailwindcss.com"></script>
 
 <!-- AOS Script -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
