--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -33,6 +33,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
+  <script src="https://cdn.tailwindcss.com"></script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -185,7 +186,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
-        <img src="../img/logo/mvh_logo.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
+        <img src="../img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
@@ -220,7 +221,7 @@
   <div id="pdf-content" class="relative max-w-4xl mx-auto bg-white shadow-lg border border-gray-300 mt-40 mb-10 p-12 overflow-hidden">
     <!-- Letterhead with Logo -->
     <div class="flex flex-col items-center mb-6">
-      <img src="../img/logo/mvh_logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
+      <img src="../img/logo/mvh_logo_optimized.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
       <h2 class="text-lg font-semibold text-gray-700">Metro Vigan Hospital</h2>
       <p class="text-sm text-gray-600">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</p>
     </div>
@@ -263,14 +264,6 @@
     </div>
   </div>
 
-  <!-- Download Button -->
-  <div class="flex justify-center mt-4 mb-10">
-    <button onclick="downloadPDF()" 
-            class="bg-green-600 text-white px-6 py-2 rounded-md shadow hover:bg-green-700 transition">
-      📄 Download as PDF
-    </button>
-  </div>
-
   <!-- FOOTER -->
   <footer class="bg-gray-50 text-gray-800">
     <div class="max-w-7xl mx-auto px-6 md:px-12 py-12 grid grid-cols-1 md:grid-cols-4 gap-10">
@@ -278,7 +271,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="../img/logo/mvh_logo-wht.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="../img/logo/mvh_logo_optimized.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
@@ -376,34 +369,23 @@
     </div>
   </footer>
   
-  <script src="https://cdn.tailwindcss.com"></script>
+<!-- icons / css -->
+<script src="../js/script.js"></script>
+<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('navbar-menu');
 
-  <script>
-    // Mobile Navbar Toggle
-    const menuToggle = document.getElementById('menu-toggle');
-    const menuIcon = document.getElementById('menu-icon');
-    const navbarMenu = document.getElementById('navbar-menu');
+  toggleBtn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+</script>
 
-    menuToggle.addEventListener('click', () => {
-      navbarMenu.classList.toggle('hidden');
-      menuIcon.innerHTML = navbarMenu.classList.contains('hidden')
-        ? `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>` 
-        : `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>`;
-    });
+<!-- AOS Script -->
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
-    // PDF Download
-    function downloadPDF() {
-      const element = document.getElementById("pdf-content");
-      const opt = {
-        margin: 0.5,
-        filename: 'MVH-Privacy-Notice.pdf',
-        image: { type: 'jpeg', quality: 0.98 },
-        html2canvas: { scale: 2 },
-        jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
-      };
-      html2pdf().set(opt).from(element).save();
-    }
-  </script>
-  
+<script>
+    AOS.init();
+</script>
+
 </body>
 </html>
