add doctors page

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <li><a href="" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b] decoration-[#04813b] underline underline-offset-[0.425rem]">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Services</a></li>
           <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Facilities</a></li>
-          <li><a href="#doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
+          <li><a href="src/pages/doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="src/pages/about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li>
             <a href="#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
@@ -712,13 +712,12 @@
       <p class="text-gray-600 mt-3 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
         Meet our dedicated team of specialists providing exceptional care.
       </p>
-
       <!-- Doctors Grid -->
       <div class="mt-12 grid gap-8 sm:grid-cols-2 lg:grid-cols-4">
         <!-- Doctor Card Template -->
         
-              <!-- Doctor 8 -->
-              <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
+        <!-- Doctor 8 -->
+        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
                   <img src="src/img/doctors/dr_quadra.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
@@ -743,9 +742,9 @@
                       </div>
                   </div>
                 </div>
-              </div>
+        </div>
 
-                    <!-- Doctor 8 -->
+        <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
             <img src="src/img/doctors/dr_dianne.avif" fetchpriority="low" loading="lazy" alt="Dr. Dianne Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
@@ -772,8 +771,8 @@
           </div>
         </div>
 
-              <!-- Doctor 8 -->
-              <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
+        <!-- Doctor 8 -->
+        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
                   <img src="src/img/doctors/dr_nijell.avif" fetchpriority="low" loading="lazy" alt="Dr. Nijell Pizarro" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
@@ -797,9 +796,9 @@
                       </div>
                   </div>
                 </div>
-              </div>
+        </div>
 
-                    <!-- Doctor 8 -->
+        <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
             <img src="src/img/doctors/dr_jonas.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonas Claro Cauton" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
@@ -826,8 +825,8 @@
           </div>
         </div>
 
-              <!-- Doctor 8 -->
-              <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
+        <!-- Doctor 8 -->
+        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
                   <img src="src/img/doctors/dr_miko.avif" fetchpriority="low" loading="lazy" alt="Dr. Miko Galut" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
@@ -858,9 +857,9 @@
                       </div>
                   </div>
                 </div>
-              </div>
+        </div>
 
-                    <!-- Doctor 8 -->
+        <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
             <img src="src/img/doctors/dr_frances.avif" fetchpriority="low" loading="lazy"  alt="Dr. Frances Obrero-Artajos" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
@@ -887,8 +886,8 @@
           </div>
         </div>
 
-              <!-- Doctor 8 -->
-              <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
+        <!-- Doctor 8 -->
+        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
                   <img src="src/img/doctors/dr_marga.avif" fetchpriority="low" loading="lazy"  alt="Dr. Margarita Cobangco" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
@@ -912,7 +911,7 @@
                       </div>
                   </div>
                 </div>
-              </div>
+        </div>
 
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
@@ -1049,8 +1048,14 @@
           </div>
         </div>
 
-
       </div>
+      
+      <!-- See More Button -->
+    <div class="mt-10">
+      <a href="src/pages/doctors.html" class="inline-block px-6 py-3 bg-[#04813b] text-white text-lg font-medium rounded-lg shadow hover:bg-green-800 transition duration-300">
+        See More Doctors
+      </a>
+    </div>
     </div>
   </section>
 
@@ -1305,7 +1310,7 @@
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-[#04813b] transition">Our Services</a></li>
           <li><a href="#facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
-          <li><a href="#doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="src/pages/doctors.html" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="src/pages/about-us.html" class="hover:text-[#04813b] transition">About Us</a></li>
           <li><a href="src/pages/careers.html" class="hover:text-[#04813b] transition">Careers</a></li>
         </ul>
