--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -208,7 +208,7 @@
           <li><a href="../../" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
-          <li><a href="#doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
+          <li><a href="doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li>
             <a href="" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Careers</a>
@@ -315,7 +315,7 @@
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-[#04813b] transition">Our Services</a></li>
           <li><a href="#facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
-          <li><a href="#doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="doctors.html" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="about-us.html" class="hover:text-[#04813b] transition">About Us</a></li>
           <li><a href="" class="hover:text-[#04813b] transition">Careers</a></li>
         </ul>
