add update careers page

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -370,10 +370,10 @@
     <div class="flex flex-col items-center py-6 text-center">
       <h1 class="text-2xl font-bold uppercase tracking-wide">METRO VIGAN HOSPITAL</h1>
       <p class="text-sm mt-1 leading-5">
-          📍 Rizal St., Brgy. IV (Poblacion), Bantay, Ilocos Sur<br>
-          ☎ (077) 674-0674<br>
-          ✉ info@metroviganhospital.com<br>
-          🌐 www.metroviganhospital.com
+          &#x1F4CD; Rizal St., Brgy. IV (Poblacion), Bantay, Ilocos Sur<br>
+          &#128222; (077) 674-0674<br>
+          &#128233; info@metroviganhospital.com<br>
+          &#127760; www.metroviganhospital.com
         </p>
       </div>
       <!-- Yellow Accent -->
