--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -220,16 +220,18 @@
   </nav>
 
   <!-- Header Section -->
-  <header class="mt-20 pt-28 pb-16 bg-white text-center shadow-sm">
-    <h1 class="text-4xl md:text-5xl font-bold text-green-700">Join Our Team</h1>
-    <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">
-      Be a part of Metro Vigan Hospital's dedicated team of healthcare professionals.
-    </p>
-  </header>
+  <section class="mt-20 pt-28 pb-16 bg-white text-center">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-800" data-aos="fade-up">
+        Join our <span class="text-[#04813b]">Team</span>
+      </h2>
+      <p class="text-gray-600 mt-3 max-w-2xl mx-auto px-4" data-aos="fade-up" data-aos-delay="100">
+        We believe in hiring the best of the best and we want you to join our MVH family!
+      </p>
+  </section>
 
   <!-- Careers Listing -->
   <section class="max-w-6xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Current Openings</h2>
+    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Job Vacancies</h2>
 
     <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       <!-- Job Card -->
@@ -286,7 +288,7 @@
       </p>
       <p class="mt-2 text-gray-600">
         For inquiries, contact our HR Department at 
-        <a href="tel:+639275090414" class="text-green-700 font-semibold hover:underline">+63 927 509 0414</a>
+        <a href="tel:+639275090414" class="text-green-700 font-semibold hover:underline">+63 905 440 3330</a>
       </p>
     </div>
   </section>
