--- a/src/pages/doctors.html
+++ b/src/pages/doctors.html
@@ -107,17 +107,6 @@
   }
   </script>
 
-  <style>
-    
-    .modal {
-      display: none;
-    }
-    .modal.active {
-      display: flex;
-    }
-
-  </style>
-
 </head>
 <body class="bg-white text-gray-800">
 
@@ -224,8 +213,8 @@
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
           <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
-          <li><a href="doctors.html" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="" class="hover:text-green-600 transition">About Us</a></li>
+          <li><a href="" class="hover:text-green-600 transition">Our Doctors</a></li>
+          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
           <li><a href="careers.html" class="hover:text-green-600 transition">Careers</a></li>
         </ul>
       </div>
