update header and footer

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
           <li><a href="" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b] decoration-[#04813b] underline underline-offset-[0.425rem]">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Services</a></li>
-          <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Facilities</a></li>
+          <li><a href="src/pages/facilities.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Facilities</a></li>
           <li><a href="src/pages/doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="src/pages/about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li>
@@ -184,7 +184,7 @@
       <nav class="hidden md:flex items-center space-x-6 text-sm font-medium text-gray-800">
         <a href="" class="hover:text-[#04813b]">Home</a>
         <a href="#services" class="hover:text-[#04813b]">Services</a>
-        <a href="#facilities" class="hover:text-[#04813b]">Facilities</a>
+        <a href="src/pages/facilities.html" class="hover:text-[#04813b]">Facilities</a>
         <a href="#doctors" class="hover:text-[#04813b]">Doctors</a>
         <a href="#about" class="hover:text-[#04813b]">About Us</a>
       </nav>
@@ -209,7 +209,7 @@
   <nav id="mobile-menu" class="hidden flex-col bg-white/95 shadow-md backdrop-blur px-6 py-4 md:hidden">
     <a href="" class="py-2 border-b hover:text-[#04813b] transition">Home</a>
     <a href="#services" class="py-2 border-b hover:text-[#04813b] transition">Services</a>
-    <a href="#facilities" class="py-2 border-b hover:text-[#04813b] transition">Facilities</a>
+    <a href="src/pages/facilities.html" class="py-2 border-b hover:text-[#04813b] transition">Facilities</a>
     <a href="#doctors" class="py-2 border-b hover:text-[#04813b] transition">Doctors</a>
     <a href="#about" class="py-2 border-b hover:text-[#04813b] transition">About Us</a>
     <button class="mt-4 bg-[#16a94c] text-white text-sm font-medium px-4 py-2 rounded-md hover:bg-[#04813b] w-full">
@@ -1309,7 +1309,7 @@
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-[#04813b] transition">Our Services</a></li>
-          <li><a href="#facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
+          <li><a href="src/pages/facilities.html" class="hover:text-[#04813b] transition">Our Facilities</a></li>
           <li><a href="src/pages/doctors.html" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="src/pages/about-us.html" class="hover:text-[#04813b] transition">About Us</a></li>
           <li><a href="src/pages/careers.html" class="hover:text-[#04813b] transition">Careers</a></li>
