--- a/src/pages/facilities.html
+++ b/src/pages/facilities.html
@@ -60,9 +60,9 @@
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
           <li><a href="../../" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
-          <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
+          <li><a href="" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">Facilities</a></li>
           <li><a href="doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
-          <li><a href="" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">About Us</a></li>
+          <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li>
             <a href="#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Contact Us</a>
           </li>
@@ -104,6 +104,111 @@
   </div>
   
 
+  <!-- FOOTER -->
+  <footer class="bg-gray-50 text-gray-800">
+    <div class="max-w-7xl mx-auto px-6 md:px-12 py-12 grid grid-cols-1 md:grid-cols-4 gap-10">
+      
+      <!-- Logo & About -->
+      <div>
+        <div class="flex items-center space-x-3">
+          <img src="../img/logo/mvh_logo_optimized.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <span class="text-lg font-semibold">Metro Vigan Hospital</span>
+        </div>
+        <p class="mt-4 text-gray-600 text-sm leading-relaxed">
+          Entrust your health to us!
+        </p>
+  <p class="text-gray-600 text-sm leading-relaxed">
+          We Care, We Cure, We Can.
+        </p>
+      </div>
+
+      <!-- Quick Links -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
+        <ul class="space-y-2 text-gray-600 text-sm">
+          <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
+          <li><a href="facilities.html" class="hover:text-green-600 transition">Our Facilities</a></li>
+          <li><a href="doctors.html" class="hover:text-green-600 transition">Our Doctors</a></li>
+          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
+          <li><a href="careers.html" class="hover:text-green-600 transition">Careers</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Info -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
+        <ul class="space-y-3 text-gray-600 text-sm">
+          <li class="flex items-center space-x-2">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.62.47 2.32 0L21 8M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z" />
+  </svg>
+  <span>
+    <a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">
+      info@metroviganhospital.com
+    </a>
+  </span>
+</li>
+
+          <li class="flex items-center space-x-2">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
+  </svg>
+  <span>
+    <a href="tel:+631234567890" class="hover:underline hover:underline-offset-2">
+      +63 (123) 456-7890
+    </a>
+  </span>
+</li>
+
+          <li class="flex items-center space-x-2">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 11 7 11s7-5.75 7-11c0-3.87-3.13-7-7-7z" />
+    <circle cx="12" cy="9" r="2" stroke-width="2" />
+  </svg>
+  <span>
+    <a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" target="_blank" class="hover:underline hover:underline-offset-2">
+      Rizal St., Brgy. IV (Poblacion), Bantay, Philippines
+    </a>
+  </span>
+</li>
+
+        </ul>
+      </div>
+
+      <!-- Social Media -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
+        <div class="flex space-x-4">
+          <!-- Facebook -->
+          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-green-600 transition" aria-label="Facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
+    <path d="M22 12c0-5.522-4.478-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54v-2.891h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.891h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
+  </svg>
+          </a>
+          <!-- Instagram -->
+          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-green-600 transition" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
+    <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.75-.88a1.13 1.13 0 1 1-2.25 0 1.13 1.13 0 0 1 2.25 0z"/>
+  </svg>
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Bottom Bar -->
+    <div class="border-t border-gray-200 mt-8">
+      <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
+        <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="../img/logo/xtianbar-logo.avif" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
+        <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
+        <div class="space-x-4 mt-2 md:mt-0">
+          <a href="privacy-policy.html" class="hover:text-green-600 transition">Privacy Policy</a>
+          <a href="terms-of-service.html" class="hover:text-green-600 transition">Terms of Service</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   
   <script>
     const floors = {
@@ -131,43 +236,74 @@
         ] }
     };
   
-    const floorContainer = document.getElementById('floorContainer');
     const floorButtons = document.querySelectorAll('.floor-btn');
-  
-    const modal = document.getElementById('facilityModal');
-    const modalName = document.getElementById('modalFacilityName');
-    const modalImage = document.getElementById('modalFacilityImage');
-  
-    function loadFloor(floorNumber) {
-      const floor = floors[floorNumber];
-      floorContainer.innerHTML = `<img src="${floor.image}" class="w-full" alt="Floor ${floorNumber}">`;
-      floor.hotspots.forEach(h => {
-        const hotspot = document.createElement("div");
-        hotspot.className = "hotspot";
-        hotspot.style.top = h.top;
-        hotspot.style.left = h.left;
-        hotspot.innerHTML = `<span class="tooltip">${h.name}</span>`;
-        hotspot.addEventListener("click", () => {
-          modalName.textContent = h.name;
-          modalImage.src = h.image;
-          modal.classList.remove("hidden");
-        });
-        floorContainer.appendChild(hotspot);
-      });
-    }
-  
-    floorButtons.forEach(btn => {
-      btn.addEventListener('click', () => {
-        floorButtons.forEach(b => b.classList.remove('bg-green-600', 'text-white'));
-        btn.classList.add('bg-green-600', 'text-white');
-        loadFloor(btn.dataset.floor);
-      });
+const floorContainer = document.getElementById('floorContainer');
+const modal = document.getElementById('facilityModal');
+const modalName = document.getElementById('modalName');
+const modalImage = document.getElementById('modalImage');
+let activeFloor = 1; // Default active floor
+
+// Add fade-in animation helper
+function fadeIn(element) {
+  element.style.opacity = 0;
+  element.style.transition = 'opacity 0.4s ease';
+  requestAnimationFrame(() => {
+    element.style.opacity = 1;
+  });
+}
+
+function loadFloor(floorNumber) {
+  const floor = floors[floorNumber];
+
+  // Clear old content
+  floorContainer.innerHTML = '';
+
+  // Create and fade-in floor image
+  const floorImg = document.createElement('img');
+  floorImg.src = floor.image;
+  floorImg.alt = `Floor ${floorNumber}`;
+  floorImg.className = 'w-full opacity-0 transition-opacity duration-500';
+  floorContainer.appendChild(floorImg);
+
+  fadeIn(floorImg);
+
+  // Add hotspots with fade-in delay for nice effect
+  floor.hotspots.forEach((h, index) => {
+    const hotspot = document.createElement("div");
+    hotspot.className = "hotspot opacity-0 transition-opacity duration-500";
+    hotspot.style.top = h.top;
+    hotspot.style.left = h.left;
+    hotspot.innerHTML = `<span class="tooltip">${h.name}</span>`;
+
+    hotspot.addEventListener("click", () => {
+      modalName.textContent = h.name;
+      modalImage.src = h.image;
+      modal.classList.remove("hidden");
     });
-  
-    function closeModal() { modal.classList.add('hidden'); }
-  
-    // Load initial floor
-    loadFloor(1);
+
+    // Slight delay per hotspot for staggered animation
+    setTimeout(() => {
+      floorContainer.appendChild(hotspot);
+      requestAnimationFrame(() => (hotspot.style.opacity = 1));
+    }, index * 100);
+  });
+
+  // Update active floor button styling
+  floorButtons.forEach(b => b.classList.remove('bg-green-600', 'text-white'));
+  document.querySelector(`.floor-btn[data-floor="${floorNumber}"]`).classList.add('bg-green-600', 'text-white');
+  activeFloor = floorNumber;
+}
+
+// Event listener for floor buttons
+floorButtons.forEach(btn => {
+  btn.addEventListener('click', () => {
+    loadFloor(btn.dataset.floor);
+  });
+});
+
+// Initialize with Floor 1 highlighted & loaded
+loadFloor(activeFloor);
+
   </script>
   
 
