--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -85,7 +85,7 @@
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
           <li><a href="#home" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
-          <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
+          <li><a href="facilities.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li>
@@ -156,7 +156,7 @@
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
+          <li><a href="facilities.html" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="doctors.html" class="hover:text-green-600 transition">Our Doctors</a></li>
           <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
           <li><a href="careers.html" class="hover:text-green-600 transition">Careers</a></li>
