update facility page

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -147,16 +147,16 @@
   </nav>
   
 <!-- BRIEF HISTORY OF MVH -->
-<section class="py-16 bg-white">
+<section class="py-16 bg-white mt-[8rem] md:mt-[12rem]">
     <div class="max-w-5xl mx-auto px-6 md:px-12">
       
         <!-- Logo -->
-    <div class="flex justify-center mt-24 mb-8" data-aos="fade-down">
+    <div class="flex justify-center mb-8" data-aos="fade-down">
         <img src="../img/logo/mvh_logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="w-48 md:w-56">
       </div>
   
       <!-- Title -->
-      <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10 text-center" data-aos="fade-up">
+      <h2 class="text-3xl md:text-5xl font-bold text-gray-800 mb-10 text-center" data-aos="fade-up">
         Brief History of <span class="text-green-700">Metro Vigan Hospital</span>
       </h2>
   
