--- a/src/pages/facilities.html
+++ b/src/pages/facilities.html
@@ -129,7 +129,18 @@
     </div>
   </nav>
   
+
+  <div class="mt-[10rem] md:mt-[14rem] text-center">
+       <!-- HEADER -->
+      <h2 class="text-4xl md:text-6xl font-bold text-gray-800 mb-10 text-center" data-aos="fade-up" data-aos-delay="100">
+        Our <span class="text-green-700">Facilities</span>
+    </h2>
+    <p class="text-gray-800 px-4">Click or swipe the interactive map to move to a different floor</p>
+  </div>
+  
   <section class="py-16 bg-white">
+
+
     <div class="container mx-auto px-4">
       <!-- Floor Selector -->
       <div class="flex justify-center space-x-2 mb-6">
@@ -264,7 +275,7 @@
     </div>
   </footer>
   
-  <script>
+    <script>
     const floors = {
       1: { image: "../img/floor_plan/1.png", hotspots: [
           { top: "30%", left: "25%", name: "ER", images: [
@@ -392,8 +403,39 @@
     
     // Responsive scaling: Reload hotspots on window resize
     window.addEventListener('resize', () => loadFloor(activeFloor));
-    </script>
-    
+    </script>    
+
+<script>
+    // --- SWIPE NAVIGATION FOR MOBILE ---
+let touchStartX = 0;
+let touchEndX = 0;
+
+floorContainer.addEventListener('touchstart', (e) => {
+  touchStartX = e.changedTouches[0].screenX;
+});
+
+floorContainer.addEventListener('touchend', (e) => {
+  touchEndX = e.changedTouches[0].screenX;
+  handleSwipe();
+});
+
+function handleSwipe() {
+  const swipeThreshold = 50; // Min distance for swipe
+  if (touchEndX < touchStartX - swipeThreshold) {
+    // Swipe left: Next floor
+    if (activeFloor < Object.keys(floors).length) {
+      loadFloor(++activeFloor);
+    }
+  } 
+  if (touchEndX > touchStartX + swipeThreshold) {
+    // Swipe right: Previous floor
+    if (activeFloor > 1) {
+      loadFloor(--activeFloor);
+    }
+  }
+}
+
+</script>
   
   <!-- icons / css -->
 <script>
