--- a/src/pages/doctors.html
+++ b/src/pages/doctors.html
@@ -108,7 +108,7 @@
   </script>
 
 </head>
-<body class="bg-white text-gray-800">
+<body class="bg-white text-gray-800 overflow-x-hidden">
 
       <!-- NAVBAR SECTION -->
   <nav class="fixed top-0 z-50 w-full bg-white border-b shadow-md sm:px-4 md:px-6 px-10 py-2" aria-label="Main navigation">
@@ -146,12 +146,12 @@
     </div>
   </nav>
 
-<main class="py-16 mt-24">
+<main class="mt-[10rem] md:mt-[14rem]">
  
   <!-- HEADER -->
-  <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10 text-center" data-aos="fade-up" data-aos-delay="100">
-        Our <span class="text-green-700">Doctors</span>
-  </h2>
+  <h2 class="text-4xl md:text-6xl font-bold text-gray-800 mb-[5rem] text-center" data-aos="fade-up" data-aos-delay="100">
+    Our <span class="text-green-700">Doctors</span>
+</h2>
 
   <!-- FILTER & SEARCH -->
   <section class="max-w-7xl mx-auto px-6 mt-8">
