--- a/src/pages/facilities.html
+++ b/src/pages/facilities.html
@@ -144,12 +144,12 @@
     <div class="container mx-auto px-4">
       <!-- Floor Selector -->
       <div class="flex justify-center space-x-2 mb-6">
-        <button class="floor-btn px-4 py-2 border rounded bg-green-600 text-white" data-floor="1">Floor 1</button>
-        <button class="floor-btn px-4 py-2 border rounded" data-floor="2">Floor 2</button>
-        <button class="floor-btn px-4 py-2 border rounded" data-floor="3">Floor 3</button>
-        <button class="floor-btn px-4 py-2 border rounded" data-floor="4">Floor 4</button>
-        <button class="floor-btn px-4 py-2 border rounded" data-floor="5">Floor 5</button>
-        <button class="floor-btn px-4 py-2 border rounded" data-floor="6">Floor 6</button>
+        <button class="floor-btn px-4 py-2 border rounded bg-green-600 text-white" data-floor="1">1ST</button>
+        <button class="floor-btn px-4 py-2 border rounded" data-floor="2">2ND</button>
+        <button class="floor-btn px-4 py-2 border rounded" data-floor="3">3RD</button>
+        <button class="floor-btn px-4 py-2 border rounded" data-floor="4">4TH</button>
+        <button class="floor-btn px-4 py-2 border rounded" data-floor="5">5TH</button>
+        <button class="floor-btn px-4 py-2 border rounded" data-floor="6">6TH</button>
       </div>
   
       <!-- Floor Plan Container -->
