update facility page

--- a/src/pages/facilities.html
+++ b/src/pages/facilities.html
@@ -144,7 +144,7 @@
     <div class="container mx-auto px-4">
       <!-- Floor Selector -->
       <div class="flex justify-center space-x-2 mb-6">
-        <button class="floor-btn px-4 py-2 border rounded bg-green-600 text-white" data-floor="1">1ST</button>
+        <button class="floor-btn px-4 py-2 border rounded bg-green-600 text-white" data-floor="1">GROUND</button>
         <button class="floor-btn px-4 py-2 border rounded" data-floor="2">2ND</button>
         <button class="floor-btn px-4 py-2 border rounded" data-floor="3">3RD</button>
         <button class="floor-btn px-4 py-2 border rounded" data-floor="4">4TH</button>
